Bug 91534 - Writer crash using Gallery icon in sidebar
Summary: Writer crash using Gallery icon in sidebar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: All All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: bibisected, haveBacktrace, regression
: 91568 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-23 16:16 UTC by Robert Gonzalez MX
Modified: 2016-10-25 19:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots and description (78.32 KB, application/vnd.oasis.opendocument.text)
2015-05-23 16:19 UTC, Robert Gonzalez MX
Details
bt with debug symbols (5.86 KB, text/plain)
2015-05-24 14:22 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Gonzalez MX 2015-05-23 16:16:50 UTC
Tested on Windows XP SP3, Windows 7 X64, Windows 8 x64

Versión: 5.0.0.0.beta1
Id. de compilación: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Configuración regional: es-MX (es_MX)

Steps to reproduce:
Open a new writer file
Select the Gallery icon of the lateral tool bar
select a gallery theme
Select the styles and formatting icon
Writer crashes.

If you doesn't select a gallery theme, when changing to the styles and formatting icon, there's no problem.
Changing form the navigator to the styles and formatting icon, or from the new themes icon in the same way, or from the other ones, doesn't crash the program. But the styles window is a little slow rendering the styles preview.
Comment 1 Robert Gonzalez MX 2015-05-23 16:19:24 UTC
Created attachment 115905 [details]
Screenshots and description
Comment 2 tommy27 2015-05-23 16:42:00 UTC
reproduced under Win8x64 using LibO  5.1.0.0.alpha1+
Build ID: 83eb114394879cbfd073322a51c47d02553c1fcf
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-22_06:33:51
Locale: en-US (it_IT)

works fine in LibO 4.4.1.2

regression, needs bibisecting
Comment 3 Michael 2015-05-23 17:07:16 UTC
bibisection in 5.0 branch below

$ git bisect log 
# bad: [c0fbc9b85ec523099dceb0f4f778fb10042efbd7] 2015-05-19: source-hash-158b50763962f66515062300e265839828463efa
# good: [e4b0a61cedc6ac0e65a4a110fd83edd8295f4856] 2014-11-20: source-hash-d273a60bfdbf9bb7623bed38667ec0647753157c
git bisect start 'c0fbc9b85ec523099dceb0f4f778fb10042efbd7' 'e4b0a61cedc6ac0e65a4a110fd83edd8295f4856'
# good: [935d2b58beb350acf647a664a1e97376503b8acb] 2015-02-18: source-hash-dd4bd0ee74fae3d7e3a16e018021da173152571b
git bisect good 935d2b58beb350acf647a664a1e97376503b8acb
# good: [7e67865d7214e3089ffceeaac1ba916f03ac21c0] 2015-04-04: source-hash-b326270fb921b3c2e7fff2da76ebae33adcaef3d
git bisect good 7e67865d7214e3089ffceeaac1ba916f03ac21c0
# good: [9ccc3e23269eebdb13eaa34c7231b7b9f6035c90] 2015-04-26: source-hash-3a96d8ead86dc210085f09076fd270f247442f0a
git bisect good 9ccc3e23269eebdb13eaa34c7231b7b9f6035c90
# bad: [54e8e3308771ab73b9de0e52bdef20826f428fab] 2015-05-07: source-hash-6e78bf76f3a10b43475e1bd801bdcbb9ce62f668
git bisect bad 54e8e3308771ab73b9de0e52bdef20826f428fab
# bad: [54e8e3308771ab73b9de0e52bdef20826f428fab] 2015-05-07: source-hash-6e78bf76f3a10b43475e1bd801bdcbb9ce62f668
git bisect bad 54e8e3308771ab73b9de0e52bdef20826f428fab
# skip: [0f7da7628876aad0c28a577a70d6a660dfa1ab4e] 2015-05-01: source-hash-5a24b94662414fb9470be9c5d9c8b28c6ad42b5b
git bisect skip 0f7da7628876aad0c28a577a70d6a660dfa1ab4e
# bad: [18c79871a724a95167d0cce88a6be2df138dc964] 2015-05-02: source-hash-393c51cee8bc3de5a2a9f4e04161c59e8712f631
git bisect bad 18c79871a724a95167d0cce88a6be2df138dc964
# bad: [06421cdb5e5880c2f8232a04f521a341edf08de3] 2015-04-29: source-hash-2932d2db599c09ecce3faa2d627e9ee4f251183a
git bisect bad 06421cdb5e5880c2f8232a04f521a341edf08de3
# good: [1042e18eb884e17cbdd170a589d3c6db21455c01] 2015-04-27: source-hash-f0edb677f09ad338e22ac3b5d91497b4479e0b3c
git bisect good 1042e18eb884e17cbdd170a589d3c6db21455c01
# good: [af526ee52f2c296e0f17bc385d4001b9322818e7] 2015-04-28: source-hash-4fee05e680217e876210b341f904df9441a0b7cd
git bisect good af526ee52f2c296e0f17bc385d4001b9322818e7
# first bad commit: [06421cdb5e5880c2f8232a04f521a341edf08de3] 2015-04-29: source-hash-2932d2db599c09ecce3faa2d627e9ee4f251183a
Comment 4 pierre-yves samyn 2015-05-24 09:45:00 UTC
*** Bug 91568 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2015-05-24 14:21:09 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9be6c22ebc225db4d1be7bb0100a2407e9a8eb0c

tdf#91534: Writer crash using Gallery icon in sidebar

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2015-05-24 14:22:53 UTC
Created attachment 115971 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 7 Julien Nabet 2015-05-24 14:32:40 UTC
gerrit patch for 5.0: https://gerrit.libreoffice.org/#/c/15885/

I prefer waiting by feedback from experts. Indeed, with the patch pushed on master, it doesn't crash but as often, I don't know if it's the good way to fix this.
Comment 8 Commit Notification 2015-05-25 11:54:51 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c37448c13c343d96a5902d3746203573faafa731&h=libreoffice-5-0

tdf#91534: Writer crash using Gallery icon in sidebar

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2015-05-25 13:04:59 UTC
So let's put this one to FIXED.
Comment 10 Robinson Tryon (qubit) 2015-12-17 09:12:15 UTC Comment hidden (obsolete)