tdf#91534: Writer crash using Gallery icon in sidebar

test mpBrowser1 if not NULL + reorder the disposeAndClear calls
(must be reverse order compared to the order of Create calls)

Change-Id: Ia5481430791d9ab73e63d49a0ef0d5e0a6016605